# worldex

./: .gitignore  404.html  CONTRIBUTING.md  Dockerfile.postgis-h3  Makefile  README.md  docker-compose.yaml  h3.md  index.html  justfile  pgsync.docker-compose.yml  pyproject.toml  search.md
.github/workflows/: gh-pages.yml
api/: Dockerfile  README.md  alembic.ini  build-only.cloudbuild.yaml  cloudbuild.yaml  database.py  dev.Dockerfile  justfile  main.py  pyproject.toml  services.py
api/app/: __init__.py  config.py  database.py  db.py  document.py  main.py  models.py  services.py
api/app/routers/: dataset.py  filters.py  raster.py  search.py
api/app/search/: embedding.py  es.py  parser.py
api/app/sql/: bbox_fill.py  bounds_fill.py  dataset_at_resolution.py  dataset_counts.py  dataset_coverage.py  dataset_metadata.py  datasets.py  datasets_by_location.py  indexed_dataset_count.py
api/migrations/: README  env.py
api/migrations/versions/: 02b869b43dee_create_indices_for_getting_h3_parent.py  048fd4a97938_rm_unused_indices.py  15089bd532b8_index_on_h3_as_a_point.py  1fab309748e6_index_non_compact_h3_cells_to_indicate_.py  27667c22e7a7_indicate_redundant_non_.py  2c993f4274d2_indicate_non_compact_member_cells_.py  31de72c3b38c_populate_with_nigeria_schools_and_pop_.py  349fa171b1da_create_dataset_table.py  5831f3bde25d_create_h3_and_dataset_table.py  5e4a6e3fd819_create_additional_dataset_fields.py  6f7ffba53265_indicate_template_datasets.py  7bf546720f4b_cache_dataset_counts_per_osm_tile.py  86b462787ba4_add_more_h3_and_dataset_indices.py  86b462787ba4_update_h3_and_dataset_indices.py  874d2fe9a5d2_cache_dataset_counts_per_osm_tile.py  96634e1d2d5e_add_dataset_keywords.py  a815ae2a370e_indicate_dataset_derived_from_with_.py  a906141b23f0_create_h3_data_indices.py  be3aa22ec420_create_h3_and_dataset_table.py  ca8c3968d71d_populate_with_dummy_h3_data.py  d30194099b73_add_dataset_fields.py  d93f2a583709_accomodate_dataset_keywords.py  dfd7ba969b8b_add_uid_date_validity_url_and_.py  e126787e81fb_add_dataset_fields.py
api/migrations/versions_bak/: 5cd5355da939_create_h3_aggregate_views.py  migration_commands
api/scripts/: delete_h3_tiles_of_duplicate_datasets.py  es_index_datasets.py  index_critical_habitat.py  index_h3_dataset_id.py  index_hdx.py  index_nigeria_pop_density.py  index_nigeria_schools.py  index_world_pop.py  index_world_pop_compacted.py  populate_critical_habitat.py  populate_nigeria_pop_density.py  populate_nigeria_schools.py  precompute_dataset_counts.py  qdrant_index_datasets.py  tag_h3_duplicate_datasets.py  update_hdx_metadata.py  update_world_pop_metadata.py  vacuum_db.py
apps/dummy-app/: .dockerignore  .gitignore  package-lock.json  package.json
apps/dummy-app/public/: index.html  notsupported.html
apps/dummy-app/public/favicon/: manifest.json  site.webmanifest
apps/dummy-app/src/: index.js  routes.js
apps/dummy-app/src/store/: initialStateSlice.js
apps/worldex-app/: package.json
apps/worldex-app-ts/: package.json
apps/worldex-app/src/: compute.js  config.js  h3const.js  main.js
apps/worldex-app/src/views/: Home.vue
apps/worldex-map/: .env  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/worldex-map/src/: index.tsx  routes.tsx
cors-anywhere/: .dockerignore  Dockerfile  cloudbuild.yaml  index.js  package.json
dataset_providers/: index.html
elasticsearch/: cloudbuild.yaml
installation/: index.html
metadata_schema/: index.html
notebooks/: index_genertic_vector.ipynb  index_worldpop.ipynb  ingest_data.ipynb
notebooks/custom_provider/: index.html
notebooks/index_energydata/: index.html
notebooks/index_generic_vector/: index.html
notebooks/index_protectedplanet/: index.html
notebooks/index_unhcr/: index.html
notebooks/index_worldbankcatalog/: index.html
notebooks/index_worldpop/: index.html
postgis-h3/: Dockerfile  Dockerfile.postgis-h3  README.md  arm64.Dockerfile  cloudbuild.yaml  initdb-extensions.sh  justfile  postgresql.32gb.conf  postgresql.64gb.conf  postgresql.8gb.conf  postgresql.conf
quick_start/: index.html
secrets/: api.env.tpl  api.envrc.tpl  aws.env.tpl  db.env.tpl  embedding.env.tpl  es.env.tpl  generate_password.py  pgsync.env.tpl  pgweb.env.tpl  pyproject.toml  qdrant.env.tpl  redis.env.tpl
tests/handlers/: test_csv.py  test_geotiff.py  test_gpkg.py  test_gps.py  test_gpx.py  test_multilinestring.py  test_shapefile.py
ui/: .env.development  .env.production  .eslintrc.cjs  .eslintrc.json  .prettierrc.cjs  Dockerfile  README.md  app.yaml  cloudbuild.yaml  dev.Dockerfile  index.html  nginx.Dockerfile  nginx.conf  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/public/: notsupported.html
ui/public/favicon/: manifest.json  site.webmanifest
ui/src/: App.tsx  index.tsx  routes.tsx
ui/src/constants/: colors.ts  h3.ts  regex.ts
ui/src/store/: appSlice.ts  initialStateSlice.ts  locationSlice.ts  previewSlice.ts  searchSlice.ts  selectedFiltersSlice.ts  selectedSlice.ts  store.ts
ui/src/utils/: api.ts  bboxToViewStateParams.ts  colors.ts  getClosestZoomResolutionPair.ts  getSteppedZoomResolutionPair.ts  groupBy.ts  h3.ts  moveViewportToBbox.ts  shapefile.ts  splitIntoBins.ts  tileRefinement.ts
worldex/: README.md  mkdocs.yml  pyproject.toml  setup.py  types.py
worldex/docs/: dataset_providers.md  index.md  installation.md
worldex/docs/notebooks/: custom_provider.ipynb  index_energydata.ipynb  index_generic_vector.ipynb  index_protectedplanet.ipynb  index_unhcr.ipynb  index_worldbankcatalog.ipynb  index_worldpop.ipynb
worldex/handlers/: base.py  raster_handlers.py  utils.py  vector_handlers.py
worldex/tests/handlers/: test_csv.py  test_geotiff.py  test_gpx.py
worldex/worldex/: visualizations.py
worldex/worldex/datasets/: aiddata.py  dataset.py  energydata.py  energyinfo.py  hdx.py  ocha.py  protectedplanet.py  unhcr.py  worldbankcatalog.py  worldpop.py
worldex/worldex/handlers/: raster_handlers.py  vector_handlers.py
worldex/worldex/schema/: base.py
worldex/worldex/utils/: deep_merge.py  download.py  filemanager.py
(+74 files in other folders)
