[tool.poetry]
name = "worldex"
version = "0.0.1"
description = "Solutions for building geographic indices for indexing the world."
authors = ["Aivin V. Solatorio <avsolatorio@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/avsolatorio/worldex"


[tool.poetry.dependencies]
python = "^3.10"
h3 = "^3.7.6"


[tool.poetry_bumpversion.file."worldex/__init__.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
