[tool.poetry]
name = "worldex"
version = "0.0.1"
description = "Solutions for building geographic indices for indexing the world."
authors = ["Aivin V. Solatorio <avsolatorio@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/avsolatorio/worldex"


[tool.poetry.dependencies]
python = "^3.10"
h3 = "^3.7.6"
pandas = "^2.0.1"
numpy = "^1.24.3"
geopandas = "^0.13.2"
h3ronpy = "^0.17.4"
rasterio = "^1.3.8"


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.249"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
black = "^23.1.0"


[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.5"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
playwright = "^1.28.0"
setuptools = "^67.6.1"
matplotlib = "^3.7.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.ruff]
ignore = ["E501"]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]
exclude = ["tests/integration_tests/examples/non-utf8-encoding.py"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]


[tool.poetry_bumpversion.file."worldex/__init__.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
