[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Renzo Gabriel Bongocan <gabrielbongocan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
psycopg2-binary = "^2.9.6"
alembic = "^1.11.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
geopandas = "^0.13.2"
pandas = "^2.0.3"
shapely = "^2.0.1"
h3 = "^3.7.6"
h3pandas = "^0.2.4"
h3ronpy = "^0.17.4"
sqlalchemy = "^2.0"
s3fs = "^2023.9.1"
pytz = "^2023.3.post1"
geoalchemy2 = "^0.14.1"

[tool.poetry.group.handlers]
optional = true

[tool.poetry.group.handlers.dependencies]
worldex = {path = "../worldex", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
