[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Renzo Gabriel Bongocan <gabrielbongocan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
psycopg2-binary = "^2.9.6"
alembic = "^1.11.2"
python-dotenv = "^1.0.0"
asyncpg = "^0.28.0"
pandas = "^2.0.3"
shapely = "^2.0.1"
h3 = "3.7.6"
h3pandas = "^0.2.4"
sqlalchemy = "^2.0"
s3fs = "^2023.9.1"
pytz = "^2023.3.post1"
geoalchemy2 = "^0.14.1"
h3ronpy = "^0.19.0"
geopandas = ">=0.13.2"
greenlet = "^3.0.0"
pydantic = "2.3.0"
pydantic-settings = "^2.0.3"
gunicorn = "^21.2.0"
rasterio = "^1.3.9"
opencv-python-headless = "^4.9.0.80"
requests = "^2.31.0"
pyarrow = "^15.0.0"

[tool.poetry.group.handlers]
optional = true

[tool.poetry.group.handlers.dependencies]
worldex = {path = "../worldex", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
