[tool.poetry]
name = "worldex"
version = "0.0.1"
description = "Solutions for building geographic indices for indexing the world."
authors = ["Aivin V. Solatorio <avsolatorio@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/avsolatorio/worldex"


[tool.poetry.dependencies]
python = "^3.10"
h3 = "^3.7.6"
pandas = ">=2.0.1"
numpy = ">=1.24.3"
geopandas = ">=0.13.2"
h3ronpy = "^0.19.0"
rasterio = ">=1.3.8"
pydantic = ">=2.0,<2.4"
requests = ">=2.31.0"
s3fs = { version = "^2023.9.1", optional = true }
beautifulsoup4 = "^4.12.2"
hdx-python-api = "^6.1.2"
pyunpack = "^0.3"
patool = "^2.0.0"
toolz = "^0.12.0"
pyarrow = "^15.0.0"

[tool.poetry.extras]
s3 = ["s3fs"]


[tool.poetry.group.lint.dependencies]
ruff = "^0.0.249"
types-toml = "^0.10.8.1"
types-redis = "^4.3.21.6"
black = "^23.1.0"


[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
types-pyyaml = "^6.0.12.2"
types-requests = "^2.28.11.5"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
playwright = "^1.28.0"
setuptools = "^67.6.1"
matplotlib = "^3.7.2"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
contextily = "^1.4.0"
nbqa = "^1.7.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-jupyter = "^0.24.6"
mkdocs-material = "^9.4.8"

[tool.ruff]
ignore = ["E501"]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]
exclude = ["tests/integration_tests/examples/non-utf8-encoding.py"]
extend-include = ["*.ipynb"]

[tool.mypy]
ignore_missing_imports = "True"
disallow_untyped_defs = "True"
exclude = ["notebooks"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]


[tool.poetry_bumpversion.file."worldex/__init__.py"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
